tests/tigs/let_expr/type_declaration/semantic_error/cyclic_definition2.tig
let
    type A = B
    type B = C
    type C = A
in
end
